# observatory

./: .gitignore  .gitmodules  Cargo.toml  README.md  io.github.cosmic_utils.Observatory.json  io.github.cosmic_utils.observatory.json  justfile
i18n/en/: observatory.ftl
i18n/it/: observatory.ftl
i18n/nl/: observatory.ftl
i18n/sv/: observatory.ftl
monitord/: Cargo.toml
monitord/src/: lib.rs  main.rs
monitord/src/system/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  process.rs
monitord/src/system/gpu/: amd.rs  nvidia.rs
observatory/: Cargo.toml
observatory-daemon/: Cargo.toml
observatory-daemon/src/: main.rs
observatory-daemon/src/platform/: cpu_info.rs  gpu_info.rs  mod.rs  processes.rs  services.rs  utilities.rs
observatory-daemon/src/platform/linux/: apps.rs  cpu_info.rs  disk_info.rs  fan_info.rs  mod.rs
observatory-daemon/src/platform/linux/gpu_info/: vulkan_info.rs
observatory-daemon/src/platform/linux/openrc/: controller.rs  service.rs
observatory-daemon/src/platform/linux/services/: mod.rs  openrc.rs  systemd.rs
observatory-daemon/src/platform/linux/systemd/: service.rs
observatory/i18n/en/: observatory.ftl
observatory/i18n/hu/: observatory.ftl
observatory/i18n/it/: observatory.ftl
observatory/i18n/nl/: observatory.ftl
observatory/i18n/sv/: observatory.ftl
observatory/res/: app.desktop  metainfo.xml
observatory/src/: app.rs  main.rs
observatory/src/app/: bindings.rs  context.rs  flags.rs  message.rs  mod.rs
observatory/src/core/: config.rs  settings.rs
observatory/src/core/system_info/: mod.rs  proc_info.rs
observatory/src/pages/: overview.rs  resources.rs
observatory/src/pages/overview/: mod.rs  statistic.rs
observatory/src/pages/processes/: category.rs  mod.rs  process.rs
observatory/src/pages/resources/: cpu.rs  mem.rs
observatory/src/style/: button.rs
observatory/src/widgets/: line_graph.rs  meter.rs
res/: app.desktop
resources/: app.desktop  app.metainfo.xml  app.policy  monitord.service
src/: app.rs  config.rs  helpers.rs  main.rs
src/app/: action.rs  applications.rs  context_page.rs  cosmic_theming.rs  flags.rs  menu.rs  message.rs  mod.rs  overview.rs  overview_page.rs  page.rs  process_page.rs  processes.rs  resource_page.rs  resources.rs
src/app/overview_page/: statistic.rs
src/app/page/: cpu.rs  gpu.rs  memory.rs  network.rs  processes.rs  resources.rs  storage.rs  system.rs
src/app/page/processes/: process.rs
src/app/page/resources/: cpu.rs  device.rs  disk.rs  gpu.rs  mem.rs
src/app/process_page/: category.rs  process.rs
src/core/: i18n.rs  icons.rs  localization.rs  mod.rs  settings.rs
src/core/system_info/: mem_info.rs  mod.rs  net_info.rs
src/core/system_info/dbus_interface/: arc_str_vec.rs  cpu_dynamic_info.rs  cpu_static_info.rs  disk_info.rs  fan_info.rs  gpu_static_info.rs  mod.rs
src/observatory-daemon/: Cargo.toml
src/observatory-daemon/src/: logging.rs  main.rs  utils.rs
src/observatory-daemon/src/platform/: apps.rs  disk_info.rs  fan_info.rs
src/observatory-daemon/src/platform/linux/: fork.rs  processes.rs  utilities.rs
src/observatory-daemon/src/platform/linux/gpu_info/: mod.rs  nvtop.rs
src/observatory-daemon/src/platform/linux/openrc/: mod.rs  string_list.rs
src/observatory-daemon/src/platform/linux/systemd/: controller.rs  mod.rs
src/pages/: mod.rs  overview.rs  page.rs  processes.rs  resources.rs
src/pages/overview/: applications.rs  mod.rs
src/pages/processes/: category.rs  mod.rs  process.rs
src/pages/resources/: cpu.rs  disk.rs  gpu.rs  mem.rs  mod.rs
src/system_info/: mod.rs  proc_info.rs
src/system_info/dbus_interface/: apps.rs  disk_info.rs  gpu_dynamic_info.rs  processes.rs  service.rs
src/widget/: line_graph.rs  meter.rs  mod.rs
src/widget/graph/: line.rs  mod.rs
src/widgets/: line_graph.rs  meter.rs
