[package]
name = "observatory"
version = "0.1.0"
edition = "2021"

[dependencies]
freedesktop_entry_parser = "1.3.0"
raw-cpuid = "11.2.0"
cpu-freq = "0.0.2"
sysinfo = "0.32.0"
env_logger = "0.11"
log = "0.4"
i18n-embed-fl = "0.9.2"
rust-embed = "8.5.0"
once_cell = "1.20.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
    "xdg-portal",
    "desktop",
]

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]
