[package]
name = "monitord"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-cpuid = { version = "11.3.0", features = ["serde", "serialize"] }
lazy_static = "1.5.0"
serde = "1.0.217"
sysinfo = "0.33.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zbus = "5.3.0"
num_cpus = "1.16.0"
udisks2 = "0.3.1"
sd-notify = "0.4.5"
wgpu = "24.0.1"
nvml-wrapper = "0.10.0"
amdgpu-sysfs = "0.17.5"
